# twitch_launcher

./: .gitignore  Cargo.toml  README.md  account.json.dist  clippy.toml
.github/workflows/: test.yml
app_event/: Cargo.toml
app_event/src/: event.rs  lib.rs
input/: Cargo.toml
input/src/: handler.rs  keybind.rs  lib.rs
launcher/: Cargo.toml
launcher/src/: app.rs  handler.rs  input_mapping.rs  main.rs  terminal.rs
launcher/src/terminal/: display.rs  event.rs
server/: Cargo.toml
server/src/: server.rs
src/: app.rs  channel.rs  event.rs  handler.rs  keybind.rs  lib.rs  main.rs  main.rs.old  panel.rs  popup.rs  render.rs  secret.rs  state.rs  theme.rs  tui.rs  twitch_account.rs
state/: Cargo.toml
state/src/: app_state.rs  cache.rs  event.rs  input_mappings.rs  lib.rs  state.rs  state_machine.rs  transition.rs  util.rs
state/src/app_state/: exit.rs  home.rs  lists.rs  popup.rs  startup.rs
state/src/app_state/popup/: bool.rs  choice.rs  timed_info.rs  user_input.rs
twitch/: Cargo.toml
twitch/src/: account.rs  channel.rs  lib.rs
twitch/src/channel/: status.rs
ui/: Cargo.toml
ui/src/: lib.rs  panel.rs  render.rs  theme.rs
ui/src/render/: common.rs  home.rs  lists.rs  popup.rs  startup.rs
