[package]
name = "twitch_launcher"
version = "0.3.0"
authors = ["ProgDroid"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
crossterm = "0.23"
num = "0.4"
reqwest = "0.11"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.17"
features = ["full"]

[dependencies.tui]
version = "0.17"
default-features = false
features = ["crossterm"]

[dependencies.twitch_api2]
version = "0.5"
features = ["twitch_oauth2", "helix", "client", "reqwest_client"]