[package]
name = "twitch_launcher"
version = "0.3.0"
authors = ["ProgDroid"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/ProgDroid/twitch_launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "twitch_launcher"
path = "launcher/src/main.rs"

[workspace]
members = [
    "app_event",
    "input",
    "launcher",
    "state",
    "twitch",
    "ui",
]

[dependencies]
crossterm = "0.23"
tui = "0.18.0"

app_event = { path = "app_event" }
input = { path = "input" }
state = { path = "state" }
twitch = { path = "twitch" }
ui = { path = "ui" }

[dependencies.tokio]
version = "1.17"
features = ["full"]
