[package]
name = "twitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "3.0"
reqwest = "0.11"
serde_json = "1.0"
url = "2.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.twitch_api2]
version = "0.6.1"
features = ["twitch_oauth2", "helix", "client", "reqwest"]


[dependencies.tokio]
version = "1.17"
features = ["full"]
