[package]
name = "twitch"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
open = "3.0"
reqwest = "0.11"
serde_json = "1.0"

server = { path = "../server" }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.twitch_api]
version = "0.7.0-rc.4"
features = ["twitch_oauth2", "helix", "client", "reqwest"]

[dependencies.tokio]
version = "1.25"
features = ["full"]
